force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/BMCServiceDesk__SelfServiceSearchHistory__c.object-meta.xml
<CustomObject>
    <description>This object stores the search results for text searched in the superbox.</description>
    <label>Self Service Search History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Self Service Search History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>