force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/fields/BMCServiceDesk__CommonTicket__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CommonTicket__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of common tickets displayed during the superbox search.</description>
    <label>Common Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>