force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/fields/BMCServiceDesk__FKUser__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the user who performed the superbox search.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Search_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>