force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/fields/BMCServiceDesk__SalesforceArticles__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SalesforceArticles__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of Salesforce knowledge articles displayed during the superbox search.</description>
    <label>Salesforce Knowledge Articles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>