force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/fields/BMCServiceDesk__Search_Group__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Search_Group__c</fullName>
    <label>Search Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>