force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/fields/BMCServiceDesk__SearchedText__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SearchedText__c</fullName>
    <description>Stores the users’ search strings entered in the superbox.</description>
    <label>Search Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>