force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/fields/BMCServiceDesk__ServiceRequests__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ServiceRequests__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of service request records displayed during the superbox search.</description>
    <label>Service Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>