force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/fields/BMCServiceDesk__Source__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Source__c</fullName>
    <description>Indicates whether the superbox search was performed in Self Service or Salesforce 1 mobile app.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>