force-app/main/default/objects/BMCServiceDesk__SelfServiceSearchHistory__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__Search_Group__c</columns>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__SearchedText__c</columns>
    <columns>BMCServiceDesk__Source__c</columns>
    <columns>BMCServiceDesk__Articles__c</columns>
    <columns>BMCServiceDesk__SalesforceArticles__c</columns>
    <columns>BMCServiceDesk__ServiceRequests__c</columns>
    <columns>BMCServiceDesk__CommonTicket__c</columns>
    <columns>BMCServiceDesk__Broadcasts__c</columns>
    <columns>BMCServiceDesk__FKUser__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>